Fix page header alignment on mobiles

--- a/css/main.css
+++ b/css/main.css
@@ -623,7 +623,7 @@ display | like
     padding-right: 0;
     border-right: none;
   }
-  .content > h1:first-of-type {
+  .content > h2:first-of-type {
     text-align: right;
   }
   .tile {
