--- a/src/styles/mobile.less
+++ b/src/styles/mobile.less
@@ -101,7 +101,7 @@
     border-right: none;
   }
 
-  .content > h1:first-of-type {
+  .content > h2:first-of-type {
     // avoid interference with .back-button
     text-align: right;
   }
